# torchmcr

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: basic_usage.ipynb  extract_spectra.ipynb
src/torchmcr/: __init__.py  basemodel.py  simplemcr.py  spectrainit.py  train.py
src/torchmcr/loss_models/: loss_components.py  loss_registry.py  smooth_loss.py  weight_restraints.py
src/torchmcr/synthetic/: randomdata.py  randomfield.py  randomgaussians.py
src/torchmcr/utils/: domain_constraints.py
tests/: __init__.py  test_basemodel.py  test_simplemcr.py  test_spectrainit.py  test_torchmcr.py  test_train.py
tests/loss_models/: test_smooth_loss.py
tests/synthetic/: test_randomgausians.py
