[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchmcr"
version = "0.1.0"
description = "torch based MCR"
readme = "README.rst"
authors = [
  {name = "Petrus H. Zwart", email = "phzwart@lbl.gov"}
]
maintainers = [
  {name = "Petrus H. Zwart", email = "phzwart@lbl.gov"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/phzwart/torchmcr/issues"
changelog = "https://github.com/phzwart/torchmcr/blob/master/changelog.md"
homepage = "https://github.com/phzwart/torchmcr"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

